# emul8

./: Cargo.toml  README.md
src/: c8.rs  font.rs  instr.rs  main.rs
test/: test.ch8
